Fixes unnecessary scrollbars

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -261,7 +261,7 @@
     .tab-content {
       background: white;
       padding-top: .6em;
-      height: ~"calc(100% - 4em)";
+      height: ~"calc(100% - 3.2em)";
       overflow-y: scroll;
     }
   }
